--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.1.0-beta.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -15,6 +18,9 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "less": "^4.1.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.8.0"
   }
 }
