--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve":   "vue-cli-service serve",
+    "build":   "vue-cli-service build",
+    "buildUp": "vue-cli-service build --report"
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
