--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@vueup/vue-quill": "^1.0.0-alpha.40",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.0",
     "element-plus": "^1.1.0-beta.4",
+    "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
